--- a/config/_default/.forestry/settings.yml
+++ b/config/_default/.forestry/settings.yml
@@ -35,7 +35,7 @@ use_front_matter_path: false
 file_template: ":filename:"
 build:
   preview_env:
-  - HUGO_ENV=stage
+  - HUGO_ENV=staging
   - HUGO_VERSION=0.92.2
   - HUGO_ENABLEGITINFO=true
   preview_output_directory: public
